# Invoice_manager

./: README.md  db.sqlite3  manage.py  pyproject.toml
Invoice_manager/: asgi.py  settings.py  urls.py  wsgi.py
invoice/: admin.py  models.py  serializer.py  urls.py  views.py
invoice/migrations/: 0001_initial.py  0002_expenseitem_invoiceexpensethrough_and_more.py  0003_alter_invoice_receipt_image.py  0004_alter_invoice_receipt_image.py
invoice/templates/customers/: pdf1.html
